--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@xyflow/react": "^12.3.1",
+    "katex": "^0.16.11",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-katex": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
